# gelpia

./: Cargo.toml
requirements/: build.sh
src/args/src/: lib.rs
src/frontend/: argument_parser.py  gelpia.py  ian_utils.py
src/function/src/: lib.rs
src/ga/: Cargo.toml  algorithm.rs
src/gelpia_utils/src/: lib.rs
src/gr/: Cargo.toml
src/gr/src/: gaol.rs
