[package]
name  = "gr"
version = "0.0.1"
authors = ["Mark S. Baranowski"]
build="build.rs"


[lib]
name = "gr"
path = "src/gaol.rs"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.*"
simd = "0.2.*"
mpi = { git = "https://github.com/bsteinb/rsmpi.git", tag = "0.4.0" }

[build-dependencies]
gcc = "0.3.*"

